prevent breaks in content links

--- a/src/components/layout.module.scss
+++ b/src/components/layout.module.scss
@@ -114,6 +114,7 @@ p {
  */
 
 .content p a {
+  white-space: nowrap;
   box-shadow: inset 0 -2px 0 0 $colourPrimary;
   border-bottom: 4px solid $colourPrimary;
   transition: background 0.2s ease-out;
